--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
 }
 
 #primero{
+    margin-top: 2em;
     float: right;
     justify-content: center;
     flex-wrap: nowrap;
@@ -18,17 +19,28 @@ body {
     padding: 0;
 }
 
+.datosfinales1{
+    float: left;
+    flex-wrap: nowrap;
+}
+
+.datosfinales2{
+    flex-wrap: nowrap;
+    flex-direction: row;
+    text-align: right;
+}
+
 ul, li {
     list-style: none;
     margin: 0 ;
-    padding: 0 10px ;
+    padding: 0 10px;
     float: left;
 
 }
 .laimagen{
     text-align: center;
     line-height: 300px;
-    
+    margin-top: 5em;
 }
 
 .laimagen>img {
@@ -41,11 +53,24 @@ ul, li {
 }
 
 .barrabusqueda{
+
+    flex: 1;
     border: solid;
     height: 200px;
     width: 500px;
-    margin: 0 auto;
+    min-width: 400px;
+    line-height: 300px;
+    padding: 5px 8px 0 16px;
     
+}
+
+#unicotexto{
+ width: 300px;
+ margin: 0 auto;
+}
+
+.Ofrecido {
+  align: center; 
 }
 
 .formulariodebarra{
@@ -58,18 +83,36 @@ width: 100%;
   display: block;
   width: 100%;
   max-width: 400px;
-  margin: 0 auto;
+  margin-bottom: 10em;
+    margin-left: 37em;
+    margin-right: 6em;
+    margin-top: 5em;
   height: 40px;
-  margin-bottom: 5rem;
   line-height: 500px;
 }
 
-.botonclick{
+.botonclick1, .botonclick2 {
+    flex-wrap: nowrap;
+    flex-direction: row;
+    float: center;
+    color: rgba(19, 5, 5, 0.39);
     border: 0;
-    margin: 0;
     display: block;
     width: 150px;
-    height: 50px;
+    height: 35px;
     max-width:25%;
-    margin: 0 auto;
+    font-size: 15px;
+    border-radius: 5px 5px 5px 5px;
+}
+
+.botonclick1 {
+    
+    margin-bottom: 120em;
+    margin-left: 37em;
+    margin-right: 6em;
+    margin-top: ;
+}
+
+..botonclick2{
+    
 }
