--- a/style.css
+++ b/style.css
@@ -7,7 +7,10 @@
 }
 body {
     background-color: #ffffff;
+    font-family: Arial,sans-serif;
 }
+
+
 
 #primero{
     margin-top: 2em;
@@ -17,17 +20,44 @@ body {
     flex-direction: row;
     text-align: right;
     padding: 0;
+    height: 10%;
 }
 
-.datosfinales1{
+a:link {
+    text-decoration:none;
+}
+
+a:visited {
+    text-decoration:none;
+}
+
+a:active {
+    text-decoration:none;
+}
+
+.cajadefooter{
+    position: fixed;
+    bottom: 0;
+    border-top: 1px solid #e4e4e4;
+    width: 100%;
+    height: 10%;
+    background-color: #f2f2f2;
+}
+
+.datosfinales1 ul{
     float: left;
     flex-wrap: nowrap;
+    border: #bdbcbc 2px solid;
+    text-align: left;
+    flex-direction: row;
 }
 
-.datosfinales2{
+.datosfinales2 ul{
+    float: right;
     flex-wrap: nowrap;
     flex-direction: row;
-    text-align: right;
+    text-align: left;
+    border: #bdbcbc 2px solid;
 }
 
 ul, li {
@@ -39,7 +69,7 @@ ul, li {
 }
 .laimagen{
     text-align: center;
-    line-height: 300px;
+    line-height: 20px;
     margin-top: 5em;
 }
 
@@ -53,13 +83,12 @@ ul, li {
 }
 
 .barrabusqueda{
-
     flex: 1;
     border: solid;
     height: 200px;
     width: 500px;
     min-width: 400px;
-    line-height: 300px;
+    line-height: 50px;
     padding: 5px 8px 0 16px;
     
 }
@@ -92,38 +121,28 @@ width: 100%;
 }
 
 .opciones{
+    margin-top: 40px;
     display: block;
     text-align: -webkit-center;
 }
-.botonclick1, .botonclick2 {
-    flex-wrap: nowrap;
-    flex-direction: row;
-    white-space: pre;
-    align-items: flex-start;
-    float: center;
-    color: rgba(19, 5, 5, 0.39);
-    margin: 11px 4px;
-    padding: 0 16px;
-    border: 1px solid #f2f2f2;
-    display: block;
-    line-height: 27px;
-    width: 150px;
-    height: 35px;
-    max-width:25%;
-    font-size: 15px;
-    border-radius: 5px 5px 5px 5px;
+.botonclick{
+    
+    margin: 0 4px;
+  padding: 10px 16px;
+  border: 1px solid transparent;
+  font-size: 10px;
+  font-weight: bold;
+  line-height: 16px;
+  color: #818181;
+  background-color: #f2f2f2;
+    line-height: 16px;
+    font-size: 13px;
+    border-radius: 2px;
     user-select: none;
 }
 
-.botonclick1 {
-    /*
-    margin-bottom: 120em;
-    margin-left: 37em;
-    margin-right: 6em;
-    margin-top: ;
-    */
-}
-
-..botonclick2{
-
+.botonclick:hover {
+border-color: #c6c6c6;
+color: #534e4e;
+box-shadow: 0 2px 1px rgba(179, 62, 62, 0.671);
 }
