--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
     flex-wrap: nowrap;
     flex-direction: row;
     text-align: right;
-    padding: 0;
+    padding: 0; 
     height: 10%;
 }
 
@@ -71,6 +71,7 @@ ul, li {
     text-align: center;
     line-height: 20px;
     margin-top: 5em;
+  
 }
 
 .laimagen>img {
@@ -109,19 +110,21 @@ width: 100%;
 }
 
 .inserta{
+    border-radius: 20px;
   display: block;
   width: 100%;
-  max-width: 400px;
-  margin-bottom: 10em;
-    margin-left: 37em;
-    margin-right: 6em;
-    margin-top: 5em;
-  height: 40px;
+  max-width: 450px;
+  margin-bottom: 2em;
+    margin-left: 38%;
+    margin-right: 37%;
+    margin-top: 2em;
+  height: 45px;
   line-height: 500px;
 }
 
 .opciones{
-    margin-top: 40px;
+    margin-top: none;
+  margin-bottom: 35px;
     display: block;
     text-align: -webkit-center;
 }
@@ -130,12 +133,10 @@ width: 100%;
     margin: 0 4px;
   padding: 10px 16px;
   border: 1px solid transparent;
-  font-size: 10px;
   font-weight: bold;
-  line-height: 16px;
   color: #818181;
   background-color: #f2f2f2;
-    line-height: 16px;
+    line-height: 30%;
     font-size: 13px;
     border-radius: 2px;
     user-select: none;
